# libvtp

./: .gitignore  CMakeLists.txt  README.md  vtp.map
examples/now2sdk_example/LiveDevice/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/now2sdk_example/LiveDevice/SDK/: libQt6OpenGLWidgets.so.6  libavutil.so.60  libc++abi.so.1  libdvdnav.so.4  libnow2sdk.so.0.0.1
examples/now2sdk_example/LiveDevice/SDK/header/now2sdk/: LCharacter.h  LConvert.h  LFile.h  LFormat.h  LLicenseManager.h  LOutput.h  LRecorder.h  LSink.h  LStinger.h  LStream.h  LSwitcher.h  LVideoWidget.h  LVideoWidgetGTK.h  now2sdk.h
examples/now2sdk_example/Output/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/now2sdk_example/Output/SDK/: libQt6Core.so.6  libQt6DBus.so.6  libQt6Gui.so.6  libQt6OpenGL.so.6  libQt6OpenGLWidgets.so.6  libQt6Widgets.so.6  libc++.so.1  libdav1d.so.7  libdvdnav.so.4  libnow2sdk.so.0  libnow2sdk.so.0.0.1  libnow2sdk.so.1  libnow2sdk.so.1.0.0  librav1e.so.0.8  libthorvg-1.so.1
examples/now2sdk_example/Output/SDK/header/now2sdk/: LAnimation.h  LFilter.h  LFrame.h  LLive.h  LMixer.h  LObject.h  LOutput.h  LPreview.h  LReader.h  LReplay.h  LSignal.h  LStreamPlay.h  now2sdk_global.h
examples/vtp_receiver_ui/: CMakeLists.txt  README.md  ReceiverWindow.cpp  ReceiverWindow.h  VideoWidget.cpp  VideoWidget.h  main.cpp
examples/vtp_sender_ui/: CMakeLists.txt  README.md  SenderWindow.cpp  SenderWindow.h  main.cpp
include/: vtp.h
src/: VTPCommon.h  VTPDiscovery.cpp  VTPDiscovery.h  VTPReceiver.cpp  VTPReceiver.h  VTPSender.cpp  VTPSender.h  vtp.cpp
